<resources>
    <string name="app_name">CyclingMobileApp</string>

    <!--    Globals-->
    <string name="brand_name">GCC Cycling</string>

    <!--    Form Inputs-->
    <string name="email_input_hint">Email</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>

    <!--    Login Activity-->
    <string name="login_header">Sign In</string>
    <string name="login_button">Log in</string>
    <string name="login_signup_redirect_button">Create new account</string>

    <!--    Signup Activity-->
    <string name="signup_header">Create an account</string>
    <string name="signup_account_type_participant">Personal Account</string>
    <string name="signup_account_type_club">Club Account</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_login_redirect_button">Go back</string>

    <!-- MainActivity -->
    <string name="sign_out_btn">Sign Out</string>
    <string name="open_drawer_desc">Open Menu</string>
    <string name="close_drawer_desc">Close Menu</string>
    <string name="search_hint">Search...</string>

    <!--    Event Type Fragment-->
    <string name="event_type_fragment_title">Event Types</string>
    <string name="event_type_add_btn">Add an event type</string>

    <!--    Events Fragment-->
    <string name="events_fragment_title">Events</string>
    <string name="events_add_btn">Add an event</string>

    <!--    Account Overview Fragment-->
    <string name="account_overview_fragment_title">Active Accounts</string>

    <!--    Search Fragment-->
    <string name="search_fragment_header">Search</string>

    <!--    Profile Fragment-->
    <string name="profile_fragment_title">Profile</string>
    <string name="profile_fragment_social_media_field">Profile</string>
    <string name="profile_fragment_main_contact_field">Profile</string>
    <string name="profile_fragment_phone_number_field">Profile</string>


    <!--    Event Type Activity-->
    <string name="event_type_required_fields_header">Required Fields</string>
    <string name="event_type_label_input">Event type name</string>
    <string name="event_type_add_field_btn">+ Add</string>
    <string name="event_type_required_field_name">Name</string>

    <!--    Event Activity-->
    <string name="event_input_type_label">Event Type</string>
    <string name="event_difficulty_label">Difficulty</string>
    <string name="event_date_and_time_label">Date and Time</string>
    <string name="event_date_input_hint">Date (YYYY/MM/DD)</string>
    <string name="event_start_time_input_hint">Start Time (HH:MM)</string>
    <string name="event_end_time_input_hint">End Time (HH:MM)</string>
    <string name="event_general_details_label">Event Details</string>
    <string name="event_type_details_label">Event Type Details</string>

    <!--    Menu-->
    <string name="menu_event_type_title">Event Types</string>
    <string name="menu_account_overview_title">Clubs and Participants</string>
    <string name="menu_events_title">Events</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_search_title">Search</string>

    <!--    Common-->
    <string name="cancel_btn">Cancel</string>
    <string name="delete_confirmation_header">Confirm Deletion</string>
    <string name="delete_btn">Delete</string>
    <string name="update_btn">Update</string>
    <string name="done_btn">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
