<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/signupHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="64dp"
            android:text="@string/signup_header"
            android:textSize="34sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/signupAccountTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checkedButton="@id/signupAccountTypeParticipantRadio"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/signupAccountTypeParticipantRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inflateParticipantAccountInputViews"
                android:text="@string/signup_account_type_participant" />

            <RadioButton
                android:id="@+id/signupAccountTypeClubRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="inflateClubAccountInputViews"
                android:text="@string/signup_account_type_club" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/signupVariableInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/signupEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/signupUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/signupPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSignupButtonClick"
            android:text="@string/signup_button" />

        <Button
            android:id="@+id/signupLoginRedirectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLoginButtonClick"
            android:text="@string/signup_login_redirect_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>