<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="64dp"
            android:text="@string/login_header"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/username_input_hint"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/password_input_hint"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLoginButtonClick"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/loginSignupRedirectionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onSignupButtonClick"
            android:text="@string/login_signup_redirect_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>