<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <EditText
        android:id="@+id/requiredFieldNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/event_type_required_field_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/requiredFieldTypeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/requiredFieldDeleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn" />

        <Button
            android:id="@+id/requiredFieldUpdateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_btn" />
    </LinearLayout>

</LinearLayout>