<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/eventCreationToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/eventHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/editTextEventTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="Event Name"
                android:inputType="text" />


            <TextView
                android:id="@+id/eventTypeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/event_input_type_label"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/eventTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/eventDifficultyHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/event_difficulty_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/difficultyLevelRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:checkedButton="@id/easyRadioButton"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/easyRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="Easy" />

                <RadioButton
                    android:id="@+id/mediumRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="Medium" />

                <RadioButton
                    android:id="@+id/hardRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="Hard" />

                <RadioButton
                    android:id="@+id/extremeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="Extreme" />

            </RadioGroup>


            <TextView
                android:id="@+id/eventDateAndTimeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/event_date_and_time_label"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/event_date_input_hint"
                android:inputType="date"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/editStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/event_start_time_input_hint"
                    android:inputType="time"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/editEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/event_end_time_input_hint"
                    android:inputType="time"
                    android:minHeight="48dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/event_general_details_label"
                android:textSize="24sp" />

            <!-- Participant Limit -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextRegistrationFees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Registration Fees"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/editTextParticipantLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Participant Limit"
                    android:inputType="number"
                    android:minHeight="48dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="Postal code"
                android:inputType="text"
                android:minHeight="48dp" />


            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="Description"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/eventTypeDetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/event_type_details_label"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/eventTypeDetailsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/eventDeleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete_btn" />

                <Button
                    android:id="@+id/eventDoneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/done_btn" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</com.google.android.material.appbar.AppBarLayout>
